<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_main"
    app:startDestination="@id/nav_chat">

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.exelgramm.ui.chat.ChatFragment"
        android:label="@string/nav_chat" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.exelgramm.ui.profile.ProfileFragment"
        android:label="@string/nav_profile">
        <action
            android:id="@+id/action_nav_profile_to_chatConfig"
            app:destination="@id/chatConfigFragment" />
    </fragment>

    <fragment
        android:id="@+id/chatConfigFragment"
        android:name="com.example.exelgramm.ui.profile.ChatConfigFragment"
        android:label="@string/chat_config_title" />

</navigation>
